--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ classifiers = [
 python = "^3.10"
 dynaconf = "^3.1.12"
 click = "^8.1.3"
+langchain = "^0.0.202"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^2.17.4"
