--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,16 @@ python = "^3.10"
 dynaconf = "^3.1.12"
 click = "^8.1.3"
 langchain = "^0.0.202"
+stevedore = "^5.1.0"
+
+[tool.poetry.plugins."ai_harmonize.extractor"]
+file = "aiharmonize.extractor.langchain:LangchainExtractor"
+
+[tool.poetry.plugins."ai_harmonize.harmonizeai"]
+file = "aiharmonize.harmonizeai.openai:Gpt3HarmonizeAI"
+
+[tool.poetry.plugins."ai_harmonize.loader"]
+strip = "aiharmonize.loader.file:FileLoader"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^2.17.4"
