--- a/src/aiharmonize/config/settings.yml
+++ b/src/aiharmonize/config/settings.yml
@@ -2,3 +2,13 @@ verbose: false
 debug: false
 loglevel: warning
 logpath: /tmp/aiharmonize
+
+# 加载的需要被融合的程序路径
+file_extractor_path: /tmp/program_before_harmonize.txt
+# 融合后程序的保存路径
+file_loader_path: /tmp/program_after_harmonize.txt
+
+# 实现类的文件名
+extractor_name: langchain
+loader_name: file
+transformer_name: openai
