--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,14 +17,14 @@ click = "^8.1.3"
 langchain = "^0.0.202"
 stevedore = "^5.1.0"
 
-[tool.poetry.plugins."ai_harmonize.extractor"]
-file = "aiharmonize.extractor.langchain:LangchainExtractor"
+[tool.poetry.plugins."aiharmonize.extractor"]
+langchain = "aiharmonize.extractor.langchain:LangchainExtractor"
 
-[tool.poetry.plugins."ai_harmonize.harmonizeai"]
-file = "aiharmonize.harmonizeai.openai:Gpt3HarmonizeAI"
+[tool.poetry.plugins."aiharmonize.harmonizeai"]
+openai = "aiharmonize.harmonizeai.openai:Gpt3HarmonizeAI"
 
-[tool.poetry.plugins."ai_harmonize.loader"]
-strip = "aiharmonize.loader.file:FileLoader"
+[tool.poetry.plugins."aiharmonize.loader"]
+file = "aiharmonize.loader.file:FileLoader"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^2.17.4"
@@ -35,6 +35,8 @@ mkdocs = "^1.4.3"
 mkdocs-material = "^8.5.11"
 pytest-pylint = "^0.19.0"
 pre-commit = "^3.3.2"
+pytest-mock = "^3.11.1"
+pytest-cov = "^4.1.0"
 
 [tool.poetry.scripts]
 aiharmonize = "aiharmonize.cmdline:main"
