--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dynaconf = "^3.1.12"
 click = "^8.1.3"
 langchain = "^0.0.202"
 stevedore = "^5.1.0"
+openai = "^0.27.8"
 
 [tool.poetry.plugins."aiharmonize.extractor"]
 langchain = "aiharmonize.extractor.langchain:LangchainExtractor"
