--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,14 @@ langchain = "^0.0.202"
 stevedore = "^5.1.0"
 openai = "^0.27.8"
 gradio = "^3.35.2"
+pyan = "^0.1.3"
+pycallgraph2 = "^1.1.3"
+pyan3 = "^1.2.0"
+ipython = "^8.14.0"
+pydot = "^1.4.2"
+graphviz = "^0.20.1"
+graphviz-py = "^1.0.8"
+dotpy = "^0.0.2"
 
 [tool.poetry.plugins."aiharmonize.extractor"]
 langchain = "aiharmonize.extractor.langchain:LangchainExtractor"
